<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="12sp"
        android:gravity="center_horizontal" />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:id="@+id/date_picker"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/design_default_color_primary"
        android:gravity="center_horizontal"
        android:text="@string/time"
        android:textSize="12sp" />

    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:timePickerMode="spinner"
        android:id="@+id/time_picker"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/ok"
        android:id="@+id/time_date_ok_button"
        />

</LinearLayout>