<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/idTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:hint="@string/drink_id"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/time_field_layout"
        app:layout_constraintStart_toStartOf="@+id/idTextView"
        app:layout_constraintTop_toBottomOf="@+id/idTextView"
        android:layout_marginHorizontal="32dp">

        <EditText
            android:id="@+id/editDrinkTimeField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_marginTop="16dp"
            android:inputType="datetime"
            android:textSize="16sp"
            android:hint="@string/time"/>

        <ImageButton
            android:id="@+id/timeField_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:backgroundTint="@color/design_default_color_primary"
            android:src="@android:drawable/ic_menu_my_calendar"
            app:tint="@color/design_default_color_on_primary"/>

    </LinearLayout>


    <EditText
        android:id="@+id/inputVolumeField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/volume"
        android:inputType="numberDecimal"
        android:imeOptions="actionDone"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/idTextView"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/time_field_layout"
        app:layout_constraintTop_toBottomOf="@+id/time_field_layout">

        <AutoCompleteTextView
            android:id="@+id/drinkTypeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="4"
            android:completionThreshold="0"
            android:hint="@string/drink_type"/>

        <Button
            android:id="@+id/addNewDrinkTypeBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_primary"
            android:text="@string/new_drink_type"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="8sp"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ok_add_edit_drink_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/design_default_color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/checkbox_on_background" />

</androidx.constraintlayout.widget.ConstraintLayout>